fixed methods: 7, 9, 10